--- a/templates/base.html
+++ b/templates/base.html
@@ -16,24 +16,38 @@
         <div id="logo">
           <img src="/static/img/logo.png">
         </div>
-        <div id="header-links">
       </a>
-        <div class="link-wrapper">
-          Главная
-        </div>
-        <div class="link-wrapper">
-          <a href="/problems">Задачи</a>
-        </div>
-        <div class="link-wrapper">
-          <a href="/contests">Контесты</a>
-        </div>
+      <div id="header-links">
+        <script>
+          let path = document.location.pathname;
+          let dct = {
+            '/': "Главная",
+            '/problems': "Задачи",
+            '/contests': "Контесты"
+          }
+
+          for (var key in dct) {
+            let value = dct[key];
+            document.write("<div class='link-wrapper'>")
+            if (path == key) {
+              document.write(value + "<br>");
+            } else {
+              document.write(`<a href='${key}'>${value}</a><br>`);
+            }
+            document.write("</div>")
+          }
+        </script>
       </div>
       <div id="login-block">
         {% if current_user.is_authenticated %}
           Вы вошли как <b>{{ current_user.login }}</b><br>
-          <a href="/logout">Выйти</a>
+          <script>
+            document.write(`<a href="/logout?next=${path}">Выйти</a><br>`)
+          </script>
         {% else %}
-          <a href="/login">Войти</a><br>
+          <script>
+            document.write(`<a href="/login?next=${path}">Войти</a><br>`)
+          </script>
           <a href="/register">Зарегистрироваться</a>
         {% endif %}
       </div>
@@ -42,6 +56,10 @@
       {% block content %}{% endblock %}
   </main>
   <footer>
+    <div id="credits">
+      Pycon by Adam Arutyunov.<br>
+      Final Yandex.Lyceum 2020 project.<br>
+    </div>
     <div id="footer-div"></div>
   </footer>
 </body>
