--- a/templates/submissions.html
+++ b/templates/submissions.html
@@ -82,7 +82,8 @@
             </td>
             <td class="memory-td">
               <span>
-                {{ submission.memory if submission.memory else 0 }} KB
+                INOP
+                <!-- {{ submission.memory if submission.memory else 0 }} KB -->
               </span>
             </td>
           </tr>
