--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  position: relative;
 }
 
 html {
@@ -92,6 +93,20 @@ a {
   border-bottom: 1px solid #35A8E0;
 }
 
+a.alert-danger {
+  border-color: #DD0000;
+}
+
+a.alert-danger:hover {
+  color: #FF0000;
+  border-color: #FF0000;
+}
+
+a.list {
+  margin: 5px 0;
+  display: inline-block;
+}
+
 a:hover {
   color: #E00;
   border-color: #E00;
@@ -100,6 +115,7 @@ a:hover {
 h1 {
   font-weight: bold;
   font-size: 50pt;
+  word-wrap: break-word;
 }
 
 h2 {
@@ -119,11 +135,18 @@ textarea, input {
 
 textarea {
   padding: 5px;
+  width: 100%;
+  height: 300px;
 }
 
 input[type="text"], input[type="password"] {
   height: 30px;
   font-size: 12pt;
+}
+
+input[type="datetime-local"] {
+  height: 30px;
+  padding: 0 5px;
 }
 
 input[type="submit"]  {
@@ -141,6 +164,8 @@ input[type="submit"]  {
 
 input[type="number"] {
   width: 50px;
+  font-size: 10pt;
+  padding: 3px;
 }
 
 input[type="file"] {
@@ -150,7 +175,7 @@ input[type="file"] {
 }
 
 input:active, input:focus, textarea:active, textarea:focus {
-  outline: none;]
+  outline: none;
 }
 
 input:-webkit-autofill {
@@ -231,6 +256,7 @@ table a {
 
 .static-input {
   width: 50%;
+  padding-left: 5px;
 }
 
 .small-grey-label {
@@ -248,7 +274,7 @@ table a {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 40px;
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
 .example-input, .example-output {
@@ -340,6 +366,10 @@ table a {
   width: 1px;
 }
 
+.central-td {
+  text-align: center;
+}
+
 .verdict-neutral {
   color: lightgrey;
 }
@@ -350,6 +380,21 @@ table a {
 
 .verdict-good {
   color: #40AA3B;
+}
+
+.delete-button {
+  border: none;
+  position: absolute;
+  top: -5px;
+  font-size: 20pt;
+}
+
+.delete-test-button {
+  border: none;
+  position: absolute;
+  top: -5.5px;
+  left: 30px;
+  font-size: 20pt;
 }
 
 .problem-status {
@@ -367,6 +412,30 @@ table a {
 
 .unsolved-problem-div {
   background-color: #F7A5A1;
+}
+
+.ok-so-basically-im-very-smol {
+  width: 80px;
+}
+
+.plus-button {
+  display: inline-block;
+  border-radius: 5px;
+  background-color: #EEE;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  vertical-align: middle;
+  font-size: 30pt;
+  margin: 0 15px;
+}
+
+.plus-button div {
+  line-height: 1.3;
+}
+
+.inactive-contest {
+  color: #DDD;
 }
 
 #limits {
