Cleared develop features.

--- a/templates/contest.html
+++ b/templates/contest.html
@@ -82,6 +82,10 @@
       <a href="/contests/{{ contest.id }}/edit" class="list">
         Редактировать контест
       </a>
+      <br>
+      <a href="/contests/{{ contest.id }}/delete" class="alert-danger list">
+        Удалить контест
+      </a>
     </div>
   {% endif %}
   <script>
