Final database check. Main page.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,22 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <p>Добро пожаловать на Pycon — площадку для проведения олимпиад по спортивному программированию на Python.
-
-  <p>Чтобы посмотреть список задач, нажмите в верхнем меню на надпись “Задачи”.
-  <p>Чтобы перейти к контестам, нажмите в верхнем меню на надпись “Контесты”.
-
-  <p>Чтобы зарегистрироваться, есть раздел “Регистрация”, а по кнопке “Войти” можно войти в систему.
-
-  <p>Нет, я не держу вас за долбоёбов, просто, на всякий случай, так.
-
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  <h1>Pycon</h1>
+  <br>
+  Добро пожаловать на <b>Pycon</b> — площадку для проведения олимпиад по спортивному программированию на Python.
+  <br><br>
+  У нас есть <a href="/problems">задачи</a> и <a href="/contests">контесты</a>.
+  <br><br>
+  Разумеется, чтобы принимать участие во всех этих замечательных штуках, вам нужно <a href="/login">войти в систему</a>, а если нет аккаунта, очевидно, <a href="/register">зарегистрироваться</a>.
+  <br><br>
+  Здесь, наверное, будут новости всякие.
+  <br><br>
+  Наверное, здесь достаточно просто что-нибудь сломать или взломать. <b><i>Не надо, пожалуйста.</i></b>
+  <br><br>
+  Название читается как <i>«Па́йкон»</i>.
+  <br><br>
+  Оформление главной страницы — одна из самых мучительных вещей, потому что при создании обычно ничего и нет, собственно.
+  <br><br>
+  <h3>Но у нас есть!</h3>
+  <br><br>
 {% endblock %}
