Main page formalization.

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,18 +5,16 @@
   <br>
   Добро пожаловать на <b>Pycon</b> — площадку для проведения олимпиад по спортивному программированию на Python.
   <br><br>
-  У нас есть <a href="/problems">задачи</a> и <a href="/contests">контесты</a>.
+  Здесь есть <a href="/problems">задачи</a> и <a href="/contests">контесты</a>.
   <br><br>
-  Разумеется, чтобы принимать участие во всех этих замечательных штуках, вам нужно <a href="/login">войти в систему</a>, а если нет аккаунта, очевидно, <a href="/register">зарегистрироваться</a>.
+  Чтобы принимать участие в контестах, вам нужно <a href="/login">войти в систему</a>, а если нет аккаунта — <a href="/register">зарегистрироваться</a>.
   <br><br>
-  Здесь, наверное, будут новости всякие.
-  <br><br>
-  Наверное, здесь достаточно просто что-нибудь сломать или взломать. <b><i>Не надо, пожалуйста.</i></b>
+  Наверное, здесь достаточно просто что-нибудь сломать или взломать. Не надо, пожалуйста.
   <br><br>
   Название читается как <i>«Па́йкон»</i>.
   <br><br>
-  Оформление главной страницы — одна из самых мучительных вещей, потому что при создании обычно ничего и нет, собственно.
+  Сейчас платформа находится в стадии тестирования. Все замечания запомните до того момента, как мы будем собирать обратную связь.
   <br><br>
-  <h3>Но у нас есть!</h3>
+  Удачи!
   <br><br>
 {% endblock %}
