--- a/templates/submissions.html
+++ b/templates/submissions.html
@@ -9,7 +9,7 @@
 {% block content %}
   <div class="content-header">
     <h2>
-      Мои посылки
+      Посылки
     </h2>
   </div>
   <div class="content-block">
