--- a/templates/problem.html
+++ b/templates/problem.html
@@ -114,6 +114,6 @@
   </div>
 
   <script type="text/javascript">
-    var CM = CodeMirror.fromTextArea(document.getElementById('solution-text'), {mode: 'python', lineNumbers: true});
+    var CM = CodeMirror.fromTextArea(document.getElementById('solution-text'), {mode: 'python', lineNumbers: true, indentUnit: 4});
   </script>
 {% endblock %}
